--- a/sections/dev__featured-collection.liquid
+++ b/sections/dev__featured-collection.liquid
@@ -4,8 +4,8 @@
       {{ section.settings.heading }}
     </div>
 
-    <a 
-      href="{{ section.settings.linkUrl }}" 
+    <a
+      href="{{ section.settings.linkUrl }}"
       class="featured-collection__view-all-link-section {{ section.settings.featured-collection__view-all-link-section }}"
     >
       {{ section.settings.all_product_heading }}
@@ -44,7 +44,8 @@
             {% endif %}
           </div>
           <div class="featured-collection__deal-tag {{ block.settings.featured-collection__deal-tag }}">
-            {{ block.settings.deal_heading }} {{ block.settings.deal }}
+            {{ block.settings.deal_heading }}
+            {{ block.settings.deal }}
           </div>
         </div>
         <p class="featured-collection__category {{ block.settings.featured-collection__category }}" id="categoryCSS">
