--- a/sections/dev__table.liquid
+++ b/sections/dev__table.liquid
@@ -5,20 +5,26 @@
         <th scope="col" class="table__trow {{ section.settings.table__trow }} ">
           {{ section.settings.table__heading1 }}
         </th>
-        <th scope="col" class="px-6 py-3">{{ section.settings.table__heading2 }}</th>
-        <th scope="col" class="px-6 py-3">{{ section.settings.table__heading3 }}</th>
-        <th scope="col" class="px-6 py-3">{{ section.settings.table__heading4 }}</th>
+        <th scope="col" class="{{ section.settings.table__trow }}">{{ section.settings.table__heading2 }}</th>
+        <th scope="col" class="{{ section.settings.table__trow }}">{{ section.settings.table__heading3 }}</th>
+        <th scope="col" class="{{ section.settings.table__trow }}">{{ section.settings.table__heading4 }}</th>
       </tr>
     </thead>
     <tbody>
       {% for block in section.blocks %}
-        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-          <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-            Apple MacBook Pro 17"
+        <tr class="table__mainblock {{ block.settings.table__mainblock }}">
+          <th scope="row" class="table__heading_style {{ block.settings.table__heading_style }}">
+            {{ block.settings.table__blockheading1 }}
           </th>
-          <td class="px-6 py-4">Silver</td>
-          <td class="px-6 py-4">Laptop</td>
-          <td class="px-6 py-4">$2999</td>
+          <td class="table__sub_heading_style {{ block.settings.table__sub_heading_style }}">
+            {{ block.settings.table__blockheading2 }}
+          </td>
+          <td class="table__sub_heading_style {{ block.settings.table__sub_heading_style }}">
+            {{ block.settings.table__blockheading3 }}
+          </td>
+          <td class="table__sub_heading_style {{ block.settings.table__sub_heading_style }}">
+            {{ block.settings.table__blockheading4 }}
+          </td>
         </tr>
       {% endfor %}
     </tbody>
@@ -84,14 +90,54 @@
   ],
   "blocks": [
     {
-      "type": "timeline_block",
-      "name": "Timeline",
+      "type": "table_block",
+      "name": "Add Table Row",
       "settings": [
         {
+          "type": "text",
+          "id": "table__blockheading1",
+          "label": "TableBlock Heading First",
+          "default": "Apple MacBook Pro 17"
+        },
+        {
+          "type": "text",
+          "id": "table__blockheading2",
+          "label": "Table Block Heading Second",
+          "default": "Silver"
+        },
+        {
+          "type": "text",
+          "id": "table__blockheading3",
+          "label": "Table Block Heading Third",
+          "default": "Laptop"
+        },
+        {
+          "type": "text",
+          "id": "table__blockheading4",
+          "label": "Table Block Heading Fourth",
+          "default": "$2999"
+        },
+        {
+          "type": "header",
+          "content": "Tailwind Styling Classes"
+        },
+        {
           "type": "textarea",
-          "id": "timeline__main_time",
-          "label": "Time",
-          "default": "August 2023"
+          "id": "table__mainblock",
+          "label": "Main Table Block Styling",
+          "default": "bg-gray-800 border-gray-700 text-white"
+        },
+        {
+          "type": "textarea",
+          "id": "table__heading_style",
+          "label": "Table Block Heading Styling",
+          "default": "px-6 py-4 font-medium whitespace-nowrap "
+        },
+        {
+          "type": "textarea",
+          "id": "table__sub_heading_style",
+          "label": "Table Block Row Styling",
+          "default": "px-6 py-3"
         }
       ]
     }
