Added the Back to Top Icon

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -105,5 +105,6 @@
       <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
       <li id="a11y-new-window-message">{{ 'accessibility.link_messages.new_window' | t }}</li>
     </ul>
+    {% section 'dev__back-to-the-top' %}
   </body>
 </html>
