Added Tailwind CSS through configuration settings

--- a/sections/dev__map.liquid
+++ b/sections/dev__map.liquid
@@ -1,23 +1,40 @@
-<section class="body-font relative text-gray-600">
-  <div class="absolute inset-0 bg-gray-300">
-    <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map" scrolling="no" src="https://maps.google.com/maps?width=100%&height=600&hl=en&q={{ section.settings.map_address }}&ie=UTF8&t={{ section.settings.default_map_type }}&z={{ section.settings.default_zoom }}&iwloc=B&output=embed"></iframe>
+<section class="map-section_classes {{ section.settings.map-section_classes }}">
+  <div class="map-container_classes {{ section.settings.map-container_classes }}">
+    <iframe
+      width="100%"
+      height="100%"
+      class="map-frame_classes {{ section.settings.map-frame_classes }}"
+      frameborder="0"
+      marginheight="0"
+      marginwidth="0"
+      title="map"
+      scrolling="no"
+      src="https://maps.google.com/maps?width=100%&height=600&hl=en&q={{ section.settings.map_address }}&ie=UTF8&t={{ section.settings.default_map_type }}&z={{ section.settings.default_zoom }}&iwloc=B&output=embed"
+    ></iframe>
   </div>
-  <div class="container mx-auto flex px-5 py-24">
-    <div class="relative flex flex-wrap rounded bg-white py-6 shadow-md mt-[100px]">
-      <div class="px-6 lg:w-1/2">
-        <h2 class="title-font text-xs font-semibold tracking-widest text-gray-900">{{ section.settings.map_address_heading }}</h2>
-        <p class="mt-1 flex">{{ section.settings.map_address }}</p>
+  <div class="info-container_classes {{ section.settings.info-container_classes }}">
+    <div class="address-container_classes {{ section.settings.address-container_classes }}">
+      <div class="address-info_classes {{ section.settings.address-info_classes }}">
+        <h2 class="address-heading_classes {{ section.settings.address-heading_classes }}">
+          {{ section.settings.map_address_heading }}
+        </h2>
+        <p class="address-text_classes {{ section.settings.address-text_classes }}">
+          {{ section.settings.map_address }}
+        </p>
       </div>
-      <div class="mt-4 px-6 lg:mt-0 lg:w-1/2">
-        <h2 class="title-font text-xs font-semibold tracking-widest text-gray-900">{{ section.settings.email_address_heading }}</h2>
-        <a class="leading-relaxed text-indigo-500">{{ section.settings.email_address }}</a>
-        <h2 class="title-font mt-4 text-xs font-semibold tracking-widest text-gray-900">{{ section.settings.phone_number_heading }}</h2>
-        <p class="leading-relaxed">{{ section.settings.phone_number }}</p>
+      <div class="details_classes {{ section.settings.details_classes }}">
+        <h2 class="email-heading_classes {{ section.settings.email-heading_classes }}">
+          {{ section.settings.email_address_heading }}
+        </h2>
+        <a class="email-info_classes {{ section.settings.email-info_classes }}">{{ section.settings.email_address }}</a>
+        <h2 class="phone-heading_classes {{ section.settings.phone-heading_classes }}">
+          {{ section.settings.phone_number_heading }}
+        </h2>
+        <p class="phone-info_classes {{ section.settings.phone-info_classes }}">{{ section.settings.phone_number }}</p>
       </div>
     </div>
   </div>
 </section>
-
 
 {% schema %}
 {
@@ -95,6 +112,83 @@
     {
       "type": "header",
       "content": "Tailwind Styling"
+    },
+    {
+      "type": "textarea",
+      "id": "map-section_classes",
+      "label": "Map Section Styling",
+      "default": "relative text-gray-600"
+    },
+    {
+      "type": "textarea",
+      "id": "map-container_classes",
+      "label": "Map Container Styling",
+      "default": "absolute inset-0 bg-gray-300"
+    },
+    {
+      "type": "textarea",
+      "id": "map-frame_classes",
+      "label": "Map Frame Styling"
+    },
+    {
+      "type": "textarea",
+      "id": "info-container_classes",
+      "label": "Information Container Styling",
+      "default": "mx-auto flex px-5 py-24"
+    },
+    {
+      "type": "textarea",
+      "id": "address-container_classes",
+      "label": "Address Container Styling",
+      "default": "relative flex flex-wrap rounded bg-white py-6 shadow-md mt-[100px]"
+    },
+    {
+      "type": "textarea",
+      "id": "address-info_classes",
+      "label": "Address Information Styling",
+      "default": "px-6 lg:w-1/2"
+    },
+    {
+      "type": "textarea",
+      "id": "address-heading_classes",
+      "label": "Address Heading Styling",
+      "default": "text-xs font-semibold tracking-widest text-gray-900"
+    },
+    {
+      "type": "textarea",
+      "id": "address-text_classes",
+      "label": "Address Text Styling",
+      "default": "mt-1 flex"
+    },
+    {
+      "type": "textarea",
+      "id": "details_classes",
+      "label": "Details Styling",
+      "default": "mt-4 px-6 lg:mt-0 lg:w-1/2"
+    },
+    {
+      "type": "textarea",
+      "id": "email-heading_classes",
+      "label": "Email Heading Styling",
+      "default": "text-xs font-semibold tracking-widest text-gray-900"
+    },
+    {
+      "type": "textarea",
+      "id": "email-info_classes",
+      "label": "Email Information Styling",
+      "default": "leading-relaxed text-indigo-500"
+    },
+    {
+      "type": "textarea",
+      "id": "phone-heading_classes",
+      "label": "Phone Heading Styling",
+      "default": "mt-4 text-xs font-semibold tracking-widest text-gray-900"
+    },
+    {
+      "type": "textarea",
+      "id": "phone-info_classes",
+      "label": "Phone Information Styling",
+      "default": "leading-relaxed"
     }
   ],
   "presets": [
