--- a/sections/dev__back-to-the-top.liquid
+++ b/sections/dev__back-to-the-top.liquid
@@ -1,7 +1,7 @@
-<section>
-<a id="BackToTop" href="#" title="Back to the top" class="back-to-top hide">
-  <i class="arrow"></i>
-</a>
+<section class="back-to-top_section_classes">
+  <a id="BackToTop" href="#" title="Back to the top" class="back-to-top_classes back-to-top hide">
+    <i class="arrow_classes arrow"></i>
+  </a>
 </section>
 
 <script>
@@ -34,38 +34,38 @@
 
 <style>
   .arrow {
-      display: inline-block;
-      width: 0;
-      height: 0;
-      border-left: 20px solid transparent;
-      border-right: 20px solid transparent;
-      border-bottom: 25px solid #000;
-    }
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 25px solid #000;
+  }
 
-    .back-to-top {
-      position: fixed;
-      bottom: {{ section.settings.position_from_bottom }};
-      right: 0px;
-      text-decoration: none;
-      color: #7a7a7a;
-      background-color: #eee;
-      padding: 0.3em;
-      border-top-left-radius: 3px;
-      border-bottom-left-radius: 3px;
-      z-index: 60000;
-      transition: background-color 0.3s, color 0.3s;
-      border-radius: 10px;
-    }
+  .back-to-top {
+    position: fixed;
+    bottom: {{ section.settings.position_from_bottom }};
+    right: 0px;
+    text-decoration: none;
+    color: #7a7a7a;
+    background-color: #eee;
+    padding: 0.3em;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    z-index: 60000;
+    transition: background-color 0.3s, color 0.3s;
+    border-radius: 10px;
+  }
 
-    .back-to-top:hover {
-      text-decoration: none;
-      color: #414141;
-      background-color: #ddd;
-    }
+  .back-to-top:hover {
+    text-decoration: none;
+    color: #414141;
+    background-color: #ddd;
+  }
 
-    .hide {
-      display: none !important;
-    }
+  .hide {
+    display: none !important;
+  }
 </style>
 
 {% schema %}
@@ -95,4 +95,3 @@
   ]
 }
 {% endschema %}
-
