--- a/sections/dev__map.liquid
+++ b/sections/dev__map.liquid
@@ -107,7 +107,7 @@
           "label": "Terrain"
         }
       ],
-      "default": "k"
+      "default": "p"
     },
     {
       "type": "header",
