--- a/sections/dev__timeline.liquid
+++ b/sections/dev__timeline.liquid
@@ -15,6 +15,7 @@
           <p class="timeline__main_subtitle_style {{ block.settings.timeline__main_subtitle_style }}">
             {{ block.settings.timeline__main_subtitle }}
           </p>
+          {% comment %} Adding button here {% endcomment %}
         </li>
       </ol>
     {% endfor %}
