--- a/sections/dev__video-text.liquid
+++ b/sections/dev__video-text.liquid
@@ -3,13 +3,13 @@
 <div class="video-text-container {{ section.settings.video_text_container_styles }}">
   <!-- Video container -->
   <div class="video-container {{ section.settings.video_container_styles }}">
-
     <video
       class="video-container__video {{ section.settings.video_container_video_styles }}"
       controls
       autoplay
-      loop>
-      <source src={{ section.settings.video_link }} />
+      loop
+    >
+      <source src="{{ section.settings.video_link }}">
     </video>
   </div>
 
@@ -30,7 +30,10 @@
             {{ block.settings.paragraph }}
           </p>
         {% when 'button' %}
-          <a href={{ block.settings.button_link }} class="text-container__button {{ section.settings.text_container_button_styles }}">
+          <a
+            href="{{ block.settings.button_link }}"
+            class="text-container__button {{ section.settings.text_container_button_styles }}"
+          >
             {{ block.settings.button_text }}
           </a>
       {% endcase %}
@@ -39,142 +42,142 @@
 </div>
 
 {% schema %}
-  {
-    "name": "Video with Text",
-    "settings": [
-      {
-        "type": "video",
-        "id": "video_link",
-        "label": "Video Link"
-      },
-      {
-        "type": "header",
-        "content": "Apply Tailwind CSS Classes (If Needed)",
-        "info": "Note: Insert classes with space between them."
-      },
-      {
-        "type": "text",
-        "id": "video_text_container_styles",
-        "label": "Video Text Container",
-        "default": "p-4 md:p-8 flex flex-col items-center justify-center md:flex-row"
-      },
-      {
-        "type": "text",
-        "id": "video_container_styles",
-        "label": "Video Container",
-        "default": "w-full md:w-1/2 md:order-1"
-      },
-      {
-        "type": "text",
-        "id": "video_container_video_styles",
-        "label": "Video",
-        "default": "w-full h-full rounded-lg"
-      },
-      {
-        "type": "text",
-        "id": "text_container_styles",
-        "label": "Text Container",
-        "default": "w-full text-center md:w-1/2 md:order-2 p-4 md:p-8 py-10"
-      },
-      {
-        "type": "text",
-        "id": "text_container_heading_styles",
-        "label": "Heading",
-        "default": "text-2xl md:text-4xl font-bold mb-4"
-      },
-      {
-        "type": "text",
-        "id": "text_container_sub_heading_styles",
-        "label": "Sub Heading",
-        "default": "text-lg md:text-3xl text-gray-700 mb-4"
-      },
-      {
-        "type": "text",
-        "id": "text_container_paragraph_styles",
-        "label": "Paragraph",
-        "default": "text-base md:text-lg text-gray-700 mb-4"
-      },
-      {
-        "type": "text",
-        "id": "text_container_button_styles",
-        "label": "Button",
-        "default": "md:text-lg py-2 px-5 rounded-full border-2 border-slate-400 inline-block"
-      }
-    ],
-    "blocks": [
-      {
-        "name": "Heading",
-        "type": "heading",
-        "settings": [
-          {
-            "type": "text",
-            "label": "Heading",
-            "id": "heading",
-            "default": "GEZOND LEVEN"
-          }
-        ]
-      },
-      {
-        "name": "Sub Heading",
-        "type": "sub_heading",
-        "settings": [
-          {
-            "type": "text",
-            "label": "Sub Heading",
-            "id": "sub_heading",
-            "default": "HET GEHEIM ZIT IN JE ROUTINE"
-          }
-        ]
-      },
-      {
-        "name": "Paragraph",
-        "type": "paragraph",
-        "settings": [
-          {
-            "type": "text",
-            "label": "Paragraph",
-            "id": "paragraph",
-            "default": "Elke dag supplementen slikken is best een uitdaging. Maar als he lekkere Yummygums zijn, houd je dat gemakkelijk vol. Plezier in je  outine motiveert om goed voor jezelf te blijven zorgen."
-          }
-        ]
-      },
-      {
-        "name": "Button",
-        "type": "button",
-        "settings": [
-          {
-            "type": "text",
-            "label": "Button Text",
-            "id": "button_text",
-            "default": "Your Button"
-          },
-          {
-            "type": "url",
-            "label": "Button Link",
-            "id": "button_link"
-          }
-        ]
-      }
-    ],
-    "presets": [
-      {
-        "name": "Video with Text",
-        "category": "Custom",
-        "blocks": [
-          {
-            "type": "heading"
-          },
-          {
-            "type": "sub_heading"
-          },
-          {
-            "type": "paragraph"
-          },
-          {
-            "type": "button"
-          }
-        ]
-      }
-    ]
-  }
+{
+  "name": "Video with Text",
+  "settings": [
+    {
+      "type": "video",
+      "id": "video_link",
+      "label": "Video Link"
+    },
+    {
+      "type": "header",
+      "content": "Apply Tailwind CSS Classes (If Needed)",
+      "info": "Note: Insert classes with space between them."
+    },
+    {
+      "type": "text",
+      "id": "video_text_container_styles",
+      "label": "Video Text Container",
+      "default": "p-4 md:p-8 flex flex-col items-center justify-center md:flex-row"
+    },
+    {
+      "type": "text",
+      "id": "video_container_styles",
+      "label": "Video Container",
+      "default": "w-full md:w-1/2 md:order-1"
+    },
+    {
+      "type": "text",
+      "id": "video_container_video_styles",
+      "label": "Video",
+      "default": "w-full h-full rounded-lg"
+    },
+    {
+      "type": "text",
+      "id": "text_container_styles",
+      "label": "Text Container",
+      "default": "w-full text-center md:w-1/2 md:order-2 p-4 md:p-8 py-10"
+    },
+    {
+      "type": "text",
+      "id": "text_container_heading_styles",
+      "label": "Heading",
+      "default": "text-2xl md:text-4xl font-bold mb-4"
+    },
+    {
+      "type": "text",
+      "id": "text_container_sub_heading_styles",
+      "label": "Sub Heading",
+      "default": "text-lg md:text-3xl text-gray-700 mb-4"
+    },
+    {
+      "type": "text",
+      "id": "text_container_paragraph_styles",
+      "label": "Paragraph",
+      "default": "text-base md:text-lg text-gray-700 mb-4"
+    },
+    {
+      "type": "text",
+      "id": "text_container_button_styles",
+      "label": "Button",
+      "default": "md:text-lg py-2 px-5 rounded-full border-2 border-slate-400 inline-block"
+    }
+  ],
+  "blocks": [
+    {
+      "name": "Heading",
+      "type": "heading",
+      "settings": [
+        {
+          "type": "text",
+          "label": "Heading",
+          "id": "heading",
+          "default": "GEZOND LEVEN"
+        }
+      ]
+    },
+    {
+      "name": "Sub Heading",
+      "type": "sub_heading",
+      "settings": [
+        {
+          "type": "text",
+          "label": "Sub Heading",
+          "id": "sub_heading",
+          "default": "HET GEHEIM ZIT IN JE ROUTINE"
+        }
+      ]
+    },
+    {
+      "name": "Paragraph",
+      "type": "paragraph",
+      "settings": [
+        {
+          "type": "text",
+          "label": "Paragraph",
+          "id": "paragraph",
+          "default": "Elke dag supplementen slikken is best een uitdaging. Maar als he lekkere Yummygums zijn, houd je dat gemakkelijk vol. Plezier in je  outine motiveert om goed voor jezelf te blijven zorgen."
+        }
+      ]
+    },
+    {
+      "name": "Button",
+      "type": "button",
+      "settings": [
+        {
+          "type": "text",
+          "label": "Button Text",
+          "id": "button_text",
+          "default": "Your Button"
+        },
+        {
+          "type": "url",
+          "label": "Button Link",
+          "id": "button_link"
+        }
+      ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "Video with Text",
+      "category": "Custom",
+      "blocks": [
+        {
+          "type": "heading"
+        },
+        {
+          "type": "sub_heading"
+        },
+        {
+          "type": "paragraph"
+        },
+        {
+          "type": "button"
+        }
+      ]
+    }
+  ]
+}
 {% endschema %}
