--- a/sections/dev__cards.liquid
+++ b/sections/dev__cards.liquid
@@ -38,15 +38,7 @@
               class="card__button {{ section.settings.card_button_styles }}"
             >
               {{ block.settings.card_button_text }}
-              <svg
-                class="card__button-icon {{ section.settings.card_button_icon_styles }}"
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 14 10"
-              >
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-              </svg>
+              {% render 'icon-right-arrow' %}
             </a>
           {% endif %}
         </div>
