Added configuration for iframe and styling

--- a/sections/dev__map.liquid
+++ b/sections/dev__map.liquid
@@ -1,15 +1,12 @@
 <section class="map-section_classes {{ section.settings.map-section_classes }}">
   <div class="map-container_classes {{ section.settings.map-container_classes }}">
     <iframe
-      width="100%"
-      height="100%"
+      width="{{ section.settings.iframe_width }}"
+      height="{{ section.settings.iframe_height }}"
       class="map-frame_classes {{ section.settings.map-frame_classes }}"
-      frameborder="0"
-      marginheight="0"
-      marginwidth="0"
       title="map"
-      scrolling="no"
-      src="https://maps.google.com/maps?width=100%&height=600&hl=en&q={{ section.settings.map_address }}&ie=UTF8&t={{ section.settings.default_map_type }}&z={{ section.settings.default_zoom }}&iwloc=B&output=embed"
+      scrolling="{{ section.settings.iframe_scrolling }}"
+      src="https://maps.google.com/maps?width={{ section.settings.iframe_width }}&height={{ section.settings.iframe_height }}&hl=en&q={{ section.settings.map_address }}&ie=UTF8&t={{ section.settings.default_map_type }}&z={{ section.settings.default_zoom }}&iwloc=B&output=embed"
     ></iframe>
   </div>
   <div class="info-container_classes {{ section.settings.info-container_classes }}">
@@ -40,6 +37,34 @@
 {
   "name": "Google Map Integration",
   "settings": [
+    {
+      "type": "text",
+      "id": "iframe_width",
+      "label": "iframe Width",
+      "default": "100%"
+    },
+    {
+      "type": "text",
+      "id": "iframe_height",
+      "label": "iframe Height",
+      "default": "100%"
+    },
+    {
+      "type": "select",
+      "id": "iframe_scrolling",
+      "label": "iframe Scrolling",
+      "options": [
+        {
+          "value": "no",
+          "label": "No"
+        },
+        {
+          "value": "yes",
+          "label": "Yes"
+        }
+      ],
+      "default": "no"
+    },
     {
       "type": "text",
       "id": "map_address_heading",
@@ -140,7 +165,7 @@
       "type": "textarea",
       "id": "address-container_classes",
       "label": "Address Container Styling",
-      "default": "relative flex flex-wrap rounded bg-white py-6 shadow-md mt-[100px]"
+      "default": "relative flex flex-wrap rounded bg-white py-6 shadow-md mt-[100px] max-md:py-2"
     },
     {
       "type": "textarea",
@@ -158,13 +183,13 @@
       "type": "textarea",
       "id": "address-text_classes",
       "label": "Address Text Styling",
-      "default": "mt-1 flex"
+      "default": "mt-1 flex max-md:font-light"
     },
     {
       "type": "textarea",
       "id": "details_classes",
       "label": "Details Styling",
-      "default": "mt-4 px-6 lg:mt-0 lg:w-1/2"
+      "default": "mt-4 px-6 lg:mt-0 lg:w-1/2 max-md:font-light max-md:mt-2"
     },
     {
       "type": "textarea",
@@ -182,7 +207,7 @@
       "type": "textarea",
       "id": "phone-heading_classes",
       "label": "Phone Heading Styling",
-      "default": "mt-4 text-xs font-semibold tracking-widest text-gray-900"
+      "default": "mt-4 text-xs font-semibold tracking-widest text-gray-900 max-md:mt-2"
     },
     {
       "type": "textarea",
