--- a/sections/dev__featured-collection.liquid
+++ b/sections/dev__featured-collection.liquid
@@ -32,7 +32,7 @@
           {%- assign image_tag_width = section.settings.image_tag_width -%}
           <div class="featured-collection__card-img_tag {{ block.settings.featured-collection__card-img_tag }}">
             {% if block.settings.image != blank %}
-              {{ block.settings.image | image_url: width: image_url_width | image_tag: width: image_tag_width, alt: block.settings.title, loading: "lazy" }}
+              {{ block.settings.image | image_url: width: image_url_width | image_tag: width: image_tag_width, loading: "lazy" }}
             {% else %}
               {{ 'image' | placeholder_svg_tag }}
             {% endif %}
