Fixed the video displaying issue!

--- a/sections/dev__video-text.liquid
+++ b/sections/dev__video-text.liquid
@@ -3,14 +3,23 @@
 <div class="video-text-container {{ section.settings.video_text_container_styles }}">
   <!-- Video container -->
   <div class="video-container {{ section.settings.video_container_styles }}">
-    <video
+    {% comment %} <video
       class="video-container__video {{ section.settings.video_container_video_styles }}"
       controls
       autoplay
       loop
     >
       <source src="{{ section.settings.video_link }}">
-    </video>
+    </video> {% endcomment %}
+    {{
+      section.settings.video
+      | video_tag:
+        image_size: '1100x',
+        autoplay: true,
+        loop: section.settings.enable_video_looping,
+        controls: section.settings.controls,
+        muted: section.settings.mute
+    }}
   </div>
 
   <!-- Text container -->
@@ -47,8 +56,56 @@
   "settings": [
     {
       "type": "video",
-      "id": "video_link",
-      "label": "Video Link"
+      "id": "video",
+      "label": "Video"
+    },
+    {
+      "type": "checkbox",
+      "id": "enable_video_looping",
+      "label": "Play video on loop",
+      "default": false
+    },
+    {
+      "type": "checkbox",
+      "id": "controls",
+      "label": "Video Controls",
+      "default": true
+    },
+    {
+      "type": "checkbox",
+      "id": "mute",
+      "label": "Video Mute",
+      "default": true
+    },
+    {
+      "type": "header",
+      "content": "Or embed video from URL"
+    },
+    {
+      "type": "paragraph",
+      "content": "Shows when no Shopify-hosted video is selected."
+    },
+    {
+      "type": "video_url",
+      "id": "video_url",
+      "accept": [
+        "youtube",
+        "vimeo"
+      ],
+      "default": "https://www.youtube.com/watch?v=_9VUPq3SxOc",
+      "label": "URL",
+      "info": "Use a YouTube or Vimeo URL"
+    },
+    {
+      "type": "image_picker",
+      "id": "cover_image",
+      "label": "Cover image"
+    },
+    {
+      "type": "text",
+      "id": "description",
+      "label": "Video alt text",
+      "info": "Describe the video for customers using screen readers. [Learn more](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-features#video)"
     },
     {
       "type": "header",
