fix(logo-carousel): Resolve issue with carousel display and animation

--- a/sections/dev__logo-carousel.liquid
+++ b/sections/dev__logo-carousel.liquid
@@ -1,117 +1,96 @@
-<style> 
+<!-- sections/dev__logo-carousel.liquid -->
 
-@keyframes slide {
-  from {
-    transform: translateX(0);
-  }
-
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-</style>
-
-<div class="logos {{ section.settings.style--logos }} {{ section.settings.style--logos__before-properties }} {{ section.settings.style--logos__after-properties }}">
-
-
-  {% for block in section.blocks %}
-    {% if block.settings.logo != blank %}
-      <div class="logos__slide {{ section.settings.style--logos__slide }}">
-          {%- assign logos__image_classes = "logos__image " | append: section.settings.logos__image -%}
-            {{
-              block.settings.logo
-        
-              | image_url: width: 100
-              | image_tag:
-                alt: section.settings.logo_alt,
-                class: logos__image_classes
-            }}
+<div class="logo-carousel {{ section.settings.logo_carousel_styles }}">
+  <div class="logo-carousel__wrapper {{ section.settings.logo_carousel_wrapper_styles }}">
+    {% for block in section.blocks %}
+      <div class="logo-carousel__item {{ section.settings.logo_carousel_item_styles }}">
+        {% if block.settings.logo %}
+          {{ block.settings.logo | img_url: 'master' | img_tag: class: 'logo-carousel__image' }}
+        {% endif %}
       </div>
-    {% endif %}
-  {% endfor %}
-
-  {% for block in section.blocks %}
-    {% if block.settings.logo != blank %}
-      <div class="logos__slide {{ section.settings.style--logos__slide }}">
-          {%- assign logos__image_classes = "logos__image " | append: section.settings.logos__image -%}
-            {{
-              block.settings.logo
-        
-              | image_url: width: 100
-              | image_tag:
-                alt: section.settings.logo_alt,
-                class: logos__image_classes
-            }}
+    {% endfor %}
+    {% for block in section.blocks %}
+      <div class="logo-carousel__item slide flex w-[125px] items-center justify-center">
+        {% if block.settings.logo %}
+          {{ block.settings.logo | img_url: 'master' | img_tag: class: 'logo-carousel__image' }}
+        {% endif %}
       </div>
-    {% endif %}
-  {% endfor %}
+    {% endfor %}
+  </div>
 </div>
 
-{% schema %}
-{
-  "name": "Logo Carousel",
-  "class": "shopify-brand-carousel",
-  "settings": [
-    {
-      "type": "header",
-      "content": "Tailwind Styling Classes"
-    },
-    {
-      "type": "textarea",
-      "label": "Style Logo Image",
-      "id": "logos__image",
-      "default": "h-[40px] w-auto mx-[20px] my-[0] md:mx-[40px] md:my-[0] md:h-[60px] w-auto"
-    },
-    {
-      "type": "textarea",
-      "id": "style--logos",
-      "label": "Style Logo Container",
-      "default": "py-[10px] bg-white overflow-hidden whitespace-nowrap relative group"
-    },
-    {
-      "type": "textarea",
-      "id": "style--logos__before-properties",
-      "label": "Style Logo's Before Properties",
-      "default": "before:absolute before:top-0 before:w-[200px] md:before:w-[250px] before:h-full before:content-[''] before:z-10 before:left-0 before:bg-gradient-to-l from-transparent to-white"
-    },
-    {
-      "type": "textarea",
-      "id": "style--logos__after-properties",
-      "label": "Style Logo's After Properties",
-      "default": "after:absolute after:top-0 after:w-[200px] md:after:w-[250px] after:h-full after:content-[''] after:z-10  after:right-0 after:bg-gradient-to-r from-transparent to-white"
-    },
-    {
-      "type": "textarea",
-      "id": "style--logos__slide",
-      "label": "Style Logo Slide",
-      "default": "inline-block md:mx-3 animate-[slide_5s_linear_infinite] group-hover:pause group-hover:cursor-pointer"
-    }
-  ],
-  "blocks": [
-    {
-      "type": "image",
-      "name": "Logo",
-      "settings": [
-        {
-          "type": "image_picker",
-          "id": "logo",
-          "label": "Logo",
-          "info": "Select the logo image"
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        animation: {
+          ['infinite-slider']: 'infiniteSlider 20s linear infinite',
         },
-        {
-          "type": "text",
-          "id": "logo_alt",
-          "label": "Alt Text",
-          "placeholder": "Alt text"
-        }
-      ]
-    }
-  ],
-  "presets": [
-    {
-      "name": "Logo Carousel"
-    }
-  ]
-}
+        keyframes: {
+          infiniteSlider: {
+            '0%': { transform: 'translateX(0)' },
+            '100%': {
+              transform: 'translateX(calc(-250px * 5))',
+            },
+          },
+        },
+      },
+    },
+  };
+</script>
+
+{% schema %}
+  {
+    "name": "Logo Carousel",
+    "class": "shopify-brand-carousel",
+    "settings": [
+      {
+        "type": "header",
+        "content": "Apply Tailwind CSS Classes",
+        "info": "Note: Insert classes with space between them."
+      },
+      {
+        "type": "textarea",
+        "label": "Logo Carousel Container",
+        "id": "logo_carousel_styles",
+        "default": "p-6 relative m-auto md:w-3/4 overflow-hidden bg-white before:absolute before:left-0 before:top-0 before:z-[2] before:h-full before:w-[100px] before:bg-[linear-gradient(to_right,white_0%,rgba(255,255,255,0)_100%)] before:content-[''] after:absolute after:right-0 after:top-0 after:z-[2] after:h-full after:w-[100px] after:-scale-x-100 after:bg-[linear-gradient(to_right,white_0%,rgba(255,255,255,0)_100%)] after:content-['']"
+      },
+      {
+        "type": "textarea",
+        "label": "Logo Carousel Wrapper",
+        "id": "logo_carousel_wrapper_styles",
+        "default": "animate-infinite-slider flex gap-5 w-[calc(250px*10)]"
+      },
+      {
+        "type": "textarea",
+        "label": "Logo Carousel Item",
+        "id": "logo_carousel_item_styles",
+        "default": "slide flex w-[125px] items-center justify-center"
+      },
+      {
+        "type": "textarea",
+        "label": "Logo Carousel Image Styles",
+        "id": "logo_carousel_image_styles"
+      }
+    ],
+    "blocks": [
+      {
+        "type": "image",
+        "name": "Logo",
+        "settings": [
+          {
+            "type": "image_picker",
+            "id": "logo",
+            "label": "Logo",
+            "info": "Select the logo"
+          }
+        ]
+      }
+    ],
+    "presets": [
+      {
+        "name": "Logo Carousel"
+      }
+    ]
+  }
 {% endschema %}
