Refactor: Use dynamic styling for logo carousel item

--- a/sections/dev__logo-carousel.liquid
+++ b/sections/dev__logo-carousel.liquid
@@ -10,7 +10,7 @@
       </div>
     {% endfor %}
     {% for block in section.blocks %}
-      <div class="logo-carousel__item slide flex w-[125px] items-center justify-center">
+      <div class="logo-carousel__item {{ section.settings.logo_carousel_item_styles }}">
         {% if block.settings.logo %}
           {{ block.settings.logo | img_url: 'master' | img_tag: class: 'logo-carousel__image' }}
         {% endif %}
