Addition of Newsletter Block. (#240)
* Update from Shopify for theme shopify-theme-skeleton/main

Committed from shop: tanuj-testing

* Update from Shopify for theme shopify-theme-skeleton/main

Committed from shop: tanuj-testing

* Added the Newsletter block!

* Error removal commit

---------

Co-authored-by: shopify[bot] <79544226+shopify[bot]@users.noreply.github.com>

--- a/blocks/text.liquid
+++ b/blocks/text.liquid
@@ -12,6 +12,10 @@
       "label": "Welcome to our Winter Edition!"
     }
   ],
-  "presets": [{"name": "Test preset"}]
+  "presets": [
+    {
+      "name": "Test preset"
+    }
+  ]
 }
 {% endschema %}
