--- a/sections/dev__winter.liquid
+++ b/sections/dev__winter.liquid
@@ -3,10 +3,18 @@
 {% schema %}
 {
   "name": "Winter Demo Section",
-   "blocks": [
-    { "type": "@theme" },
-    { "type": "@app" }
+  "blocks": [
+    {
+      "type": "@theme"
+    },
+    {
+      "type": "@app"
+    }
   ],
-  "presets":[{"name":"Winter Demo  Preset"}]
+  "presets": [
+    {
+      "name": "Winter Demo Preset"
+    }
+  ]
 }
 {% endschema %}
