--- a/sections/dev__testimonials-column.liquid
+++ b/sections/dev__testimonials-column.liquid
@@ -9,7 +9,11 @@
         <blockquote class="testimonial-block {{ section.settings.testimonials_block_styles }}">
           <div class="testimonial-content {{ section.settings.testimonials_content_styles }}">
             {% if testimonial.settings.testimonial_image %}
-              {{ testimonial.settings.testimonial_image | image_url: width: section.settings.image_width, height: section.settings.image_height | image_tag: class: section.settings.testimonials_image_styles }}
+              {{
+                testimonial.settings.testimonial_image
+                | image_url: width: section.settings.image_width, height: section.settings.image_height
+                | image_tag: class: section.settings.testimonials_image_styles
+              }}
             {% endif %}
 
             <div class="testimonial-info {{ section.settings.testimonials_info_styles }}">
@@ -19,13 +23,16 @@
                     xmlns="http://www.w3.org/2000/svg"
                     class="star-svg {{ section.settings.star_svg_styles }}"
                     viewBox="0 0 20 20"
-                    fill="currentColor">
+                    fill="currentColor"
+                  >
                     <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
                   </svg>
                 {% endfor %}
               </div>
 
-              <p class="testimonial-author {{ section.settings.testimonial_author_styles }}">{{ testimonial.settings.testimonial_author }}</p>
+              <p class="testimonial-author {{ section.settings.testimonial_author_styles }}">
+                {{ testimonial.settings.testimonial_author }}
+              </p>
             </div>
           </div>
 
@@ -38,155 +45,154 @@
   </div>
 </div>
 
-
 {% schema %}
-  {
-    "name": "Testimonials Column",
-    "settings": [
-      {
-        "type": "inline_richtext",
-        "id": "testimonial_title",
-        "label": "Testimonial Title",
-        "default": "Read trusted reviews from our customers"
-      },
-      {
-        "type": "header",
-        "content": "Apply Tailwind CSS Classes (If Needed)",
-        "info": "Note: Insert classes with space between them."
-      },
-      {
-        "type": "text",
-        "id": "testimonials_container_styles",
-        "label": "Testimonial Container",
-        "default": "bg-white"
-      },
-      {
-        "type": "text",
-        "id": "testimonials_wrapper_styles",
-        "label": "Testimonial Wrapper",
-        "default": "mx-auto max-w-screen-xl px-4 py-12 sm:px-6 lg:px-8 lg:py-16"
-      },
-      {
-        "type": "text",
-        "id": "testimonials_title_styles",
-        "label": "Testimonial Title",
-        "default": "text-center text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl"
-      },
-      {
-        "type": "text",
-        "id": "testimonials_grid_styles",
-        "label": "Testimonial Grid",
-        "default": "mt-8 grid grid-cols-1 gap-4 md:gap-8"
-      },
-      {
-        "type": "text",
-        "id": "testimonials_block_styles",
-        "label": "Testimonial Block",
-        "default": "rounded-lg bg-gray-50 p-6 shadow-sm sm:p-8 md:flex md:gap-8"
-      },
-      {
-        "type": "text",
-        "id": "testimonials_content_styles",
-        "label": "Testimonial Content",
-        "default": "flex md:basis-1/5 items-center gap-4"
-      },
-      {
-        "type": "text",
-        "id": "testimonials_image_styles",
-        "label": "Testimonial Image",
-        "default": "rounded-full object-cover"
-      },
-      {
-        "type": "number",
-        "id": "image_width",
-        "label": "Image Width",
-        "default": 56
-      },
-      {
-        "type": "number",
-        "id": "image_height",
-        "label": "Image Height",
-        "default": 56
-      },
-      {
-        "type": "text",
-        "id": "testimonials_info_styles",
-        "label": "Testimonial Info"
-      },
-      {
-        "type": "text",
-        "id": "star_rating_styles",
-        "label": "Star Rating",
-        "default": "flex justify-center gap-0.5 text-green-500"
-      },
-      {
-        "type": "text",
-        "id": "star_svg_styles",
-        "label": "SVG",
-        "default": "h-5 w-5"
-      },
-      {
-        "type": "text",
-        "id": "testimonial_author_styles",
-        "label": "Testimonial Author",
-        "default": "mt-0.5 text-lg font-medium text-gray-900"
-      },
-      {
-        "type": "text",
-        "id": "testimonial_text_styles",
-        "label": "Testimonial Text",
-        "default": "mt-4 md:basis-3/5 text-gray-700"
-      }
-    ],
-    "blocks": [
-      {
-        "type": "testimonial",
-        "name": "Testimonial",
-        "settings": [
-          {
-            "type": "image_picker",
-            "id": "testimonial_image",
-            "label": "Image"
-          },
-          {
-            "type": "range",
-            "id": "testimonial_rating",
-            "label": "Rating",
-            "min": 0,
-            "max": 5,
-            "step": 1,
-            "default": 5
-          },
-          {
-            "type": "text",
-            "id": "testimonial_author",
-            "label": "Author",
-            "default": "Paul Starr"
-          },
-          {
-            "type": "textarea",
-            "id": "testimonial_text",
-            "label": "Paragraph",
-            "default": "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa sit rerum incidunt, a consequuntur recusandae ab saepe illo est quia obcaecati neque quibusdam eius accusamus error officiis atque voluptates magnam!"
-          }
-        ]
-      }
-    ],
-    "presets": [
-      {
-        "name": "Testimonials Column Layout",
-        "blocks": [
-          {
-            "type": "testimonial"
-          },
-          {
-            "type": "testimonial"
-          },
-          {
-            "type": "testimonial"
-          }
-        ]
-      }
-    ]
-  }
+{
+  "name": "Testimonials Column",
+  "settings": [
+    {
+      "type": "inline_richtext",
+      "id": "testimonial_title",
+      "label": "Testimonial Title",
+      "default": "Read trusted reviews from our customers"
+    },
+    {
+      "type": "header",
+      "content": "Apply Tailwind CSS Classes (If Needed)",
+      "info": "Note: Insert classes with space between them."
+    },
+    {
+      "type": "text",
+      "id": "testimonials_container_styles",
+      "label": "Testimonial Container",
+      "default": "bg-white"
+    },
+    {
+      "type": "text",
+      "id": "testimonials_wrapper_styles",
+      "label": "Testimonial Wrapper",
+      "default": "mx-auto max-w-screen-xl px-4 py-12 sm:px-6 lg:px-8 lg:py-16"
+    },
+    {
+      "type": "text",
+      "id": "testimonials_title_styles",
+      "label": "Testimonial Title",
+      "default": "text-center text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl"
+    },
+    {
+      "type": "text",
+      "id": "testimonials_grid_styles",
+      "label": "Testimonial Grid",
+      "default": "mt-8 grid grid-cols-1 gap-4 md:gap-8"
+    },
+    {
+      "type": "text",
+      "id": "testimonials_block_styles",
+      "label": "Testimonial Block",
+      "default": "rounded-lg bg-gray-50 p-6 shadow-sm sm:p-8 md:flex md:gap-8"
+    },
+    {
+      "type": "text",
+      "id": "testimonials_content_styles",
+      "label": "Testimonial Content",
+      "default": "flex md:basis-1/5 items-center gap-4"
+    },
+    {
+      "type": "text",
+      "id": "testimonials_image_styles",
+      "label": "Testimonial Image",
+      "default": "rounded-full object-cover"
+    },
+    {
+      "type": "number",
+      "id": "image_width",
+      "label": "Image Width",
+      "default": 56
+    },
+    {
+      "type": "number",
+      "id": "image_height",
+      "label": "Image Height",
+      "default": 56
+    },
+    {
+      "type": "text",
+      "id": "testimonials_info_styles",
+      "label": "Testimonial Info"
+    },
+    {
+      "type": "text",
+      "id": "star_rating_styles",
+      "label": "Star Rating",
+      "default": "flex justify-center gap-0.5 text-green-500"
+    },
+    {
+      "type": "text",
+      "id": "star_svg_styles",
+      "label": "SVG",
+      "default": "h-5 w-5"
+    },
+    {
+      "type": "text",
+      "id": "testimonial_author_styles",
+      "label": "Testimonial Author",
+      "default": "mt-0.5 text-lg font-medium text-gray-900"
+    },
+    {
+      "type": "text",
+      "id": "testimonial_text_styles",
+      "label": "Testimonial Text",
+      "default": "mt-4 md:basis-3/5 text-gray-700"
+    }
+  ],
+  "blocks": [
+    {
+      "type": "testimonial",
+      "name": "Testimonial",
+      "settings": [
+        {
+          "type": "image_picker",
+          "id": "testimonial_image",
+          "label": "Image"
+        },
+        {
+          "type": "range",
+          "id": "testimonial_rating",
+          "label": "Rating",
+          "min": 0,
+          "max": 5,
+          "step": 1,
+          "default": 5
+        },
+        {
+          "type": "text",
+          "id": "testimonial_author",
+          "label": "Author",
+          "default": "Paul Starr"
+        },
+        {
+          "type": "textarea",
+          "id": "testimonial_text",
+          "label": "Paragraph",
+          "default": "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa sit rerum incidunt, a consequuntur recusandae ab saepe illo est quia obcaecati neque quibusdam eius accusamus error officiis atque voluptates magnam!"
+        }
+      ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "Testimonials Column Layout",
+      "blocks": [
+        {
+          "type": "testimonial"
+        },
+        {
+          "type": "testimonial"
+        },
+        {
+          "type": "testimonial"
+        }
+      ]
+    }
+  ]
+}
 {% endschema %}
