Added the Footer Group and removed Model section. (#249)
* Update from Shopify for theme shopify-theme-skeleton/main

Committed from shop: tanuj-testing

* Update from Shopify for theme shopify-theme-skeleton/main

Committed from shop: tanuj-testing

* Added the footer-group.json file in the sections and called it in the theme.liquid file

* Removed the styles from Modal

* comments removal

---------

Co-authored-by: shopify[bot] <79544226+shopify[bot]@users.noreply.github.com>

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -95,7 +95,7 @@
       {{ content_for_layout }}
     </main>
 
-    {% comment %} {% sections 'footer-group' %} {% endcomment %}
+    {% sections 'footer-group' %}
 
     {% comment %} {% sections 'drawer-group' %} {% endcomment %}
 
